--- a/JAGUARETEKAA/JAGUARETEAPP/templates/web/agregar_producto.html
+++ b/JAGUARETEKAA/JAGUARETEAPP/templates/web/agregar_producto.html
@@ -2,11 +2,12 @@
 
 {% block main %}
 
-<form method="POST">
-
+<form method="POST" enctype="multipart/form-data" action="{% url 'agregarproducto' %}">
+    {% csrf_token %}
     {{agregar_prod}}
     <button type="submit">Agregar</button>
-    {% csrf_token %}
+    
 </form>
 
 {% endblock %}
+
