--- a/JAGUARETEKAA/templates/registration/login.html
+++ b/JAGUARETEKAA/templates/registration/login.html
@@ -5,7 +5,7 @@
 <div class="text-center mt-5">
     <div class="container-sm col-4">
   
-    <h3 class="card-header">Acceder a la Web</h3>
+    <h3 class="card-header">Acceder</h3>
   
     <form method="post" action="{% url 'login' %}">
       {% csrf_token %}
