--- a/JAGUARETEKAA/JAGUARETEAPP/templates/web/home.html
+++ b/JAGUARETEKAA/JAGUARETEAPP/templates/web/home.html
@@ -1,17 +1,47 @@
-{% extends "web/layout.html" %}
+{% extends "web/layout.html" %} {% block main %}
 
-{% block main %}
+<div class="container">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+    {% for producto in primeros_productos %}
+    <div class="col">
+      <div class="card shadow-sm">
+        <a href="detalle_producto/{{producto.id}}">
+          <img
+            width="100%"
+            src="{{ media_url  }}{{producto.imagen.url}}"
+            alt=""
+        /></a>
 
-<ul>
-  {% for producto in productos %}
-    <li>
-      {{ producto.nombre}} 
-      {{producto.color}} 
-     
-      <a href="detalle_producto/{{producto.id}}"> <img src="{{ media_url  }}{{producto.imagen.url}}" alt=""></a>
-      <a href="detalle_producto/{{producto.id}}">Detalle</a>
-  {% endfor %}
-    </li>
-</ul>
+        <div class="card-body">
+          <p class="card-text">{{ producto.nombre}} {{producto.color}}</p>
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="btn-group">
+              <a href="/detalle_producto/{{producto.id}}">
+                <button type="button" class="btn btn-sm btn-outline-secondary">
+                  Ver Detalle
+                </button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+</div>
+<div class="container-fluid mb-5 abajo">
+  <h2 class="text-center my-3">MÁS PRODUCTOS</h2>      
+      {% for productoU in ultimos_productos %}
+          <p>
+              <a href="/detalle_producto/{{productoU.id}}" class="link-light"><b>{{ productoU.nombre }}</b></a> 
+              <a href="/detalle_producto/{{productoU.id}}">
+                <button type="button" class="btn btn-sm btn-outline-secondary">
+                  Ver Detalle
+                </button>
+              </a>
+          </p>
+          <br>
+      {% endfor %}     
+</div>
 
 {% endblock %}
