--- a/JAGUARETEKAA/JAGUARETEAPP/templates/web/resultado_busqueda.html
+++ b/JAGUARETEKAA/JAGUARETEAPP/templates/web/resultado_busqueda.html
@@ -1,13 +1,6 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscador</title>
-</head>
-<body>
+{% extends "web/layout.html" %} 
+{% block main %}
+
     <p>Resultado de la busqueda: {{query}}</p>
     {% if articulo %}
         <p>Productos encontrados: {{articulo|length}} productos </p>
@@ -16,11 +9,15 @@
             {% for art in articulo %}
                 <li>
                     
-                    {{art.nombre}} &nbsp; {{art.color}} &nbsp; {{art.precio}} &nbsp; <img src="{{ media_url  }}{{ art.imagen.url }}">
+                    {{art.nombre}} &nbsp; {{art.color}} &nbsp; $ {{art.precio}} &nbsp;>
+                    <a href="/detalle_producto/{{art.id}}">
+                        <button type="button" class="btn btn-sm btn-outline-secondary">
+                          Ver Detalle
+                        </button>
+                      </a>
             {% endfor %}
         </ul>
     {% else %} 
         <p>No se encontro ningun producto</p>
     {% endif %}
-</body>
-</html>
+{% endblock %}
