--- a/JAGUARETEKAA/JAGUARETEAPP/templates/web/contacto.html
+++ b/JAGUARETEKAA/JAGUARETEAPP/templates/web/contacto.html
@@ -6,7 +6,7 @@
     </div>
     <div class="card-body">    
         <p class="card-text">Consultanos por envíos y ventas por mayor:</p>
-        <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcRzBxtZgmVKswWjJRTlcLjgCtbFqFqdXxjGRHXnJrLjTFMTtcVcKDPBgMXbTHkgsqhPFmKdC">jaguaretekaa@gmail.com</a>
+        <a href="mailto:marcosrorai@gmail.com">jaguaretekaa@gmail.com</a>
         
     </div>
 </div>
