--- a/JAGUARETEKAA/JAGUARETEAPP/static/jaguarete/estilo.css
+++ b/JAGUARETEKAA/JAGUARETEAPP/static/jaguarete/estilo.css
@@ -1,25 +1,31 @@
-
-.col-3 img {
+ody {
+    font-family: "Lato", sans-serif !important;
+  }
+  
+  .col-3 img {
     width: 70px;
     height: 70px;
-}
-
-.col h1 {
+  }
+  
+  .col h1 {
     font-size: 30px;
     font-family: sans-serif;
     margin-top: 10px;
-   
-}.col-3 button{
+  }
+  .col-3 button {
     font-size: 10px;
-}
-
-
-
-.footer {
-    
+  }
+  
+  .footer {
     display: flex;
     justify-content: space-around;
     margin-top: 80px;
-    
-}
-   
+  }
+  
+  .card img {
+    max-height: 20em;
+    max-width: 20em;
+    text-align: center;
+    margin: 0 auto;
+    display: block;
+  }
