carro de compras y retoques

--- a/JAGUARETEKAA/JAGUARETEAPP/templates/web/acerca_de.html
+++ b/JAGUARETEKAA/JAGUARETEAPP/templates/web/acerca_de.html
@@ -2,7 +2,7 @@
 {% block main %}
 <div class="card container mt-5 ">
     <div class="card-header text-center">
-        <h5 class="card-title ">Acerca de JKSA</h5>
+        <h5 class="card-title ">Acerca de JAGUARETE KAA S.A.</h5>
     </div>
     <div class="card-body">    
         <p class="card-text">Trajabamos las primeras Marcas, somos importadores directos desde el año 1981 y contamos con 30 sucursales distribuidas en cada provincia del país.</p>
