--- a/JAGUARETEKAA/JAGUARETEAPP/templates/web/home.html
+++ b/JAGUARETEKAA/JAGUARETEAPP/templates/web/home.html
@@ -13,7 +13,7 @@
         /></a>
 
         <div class="card-body">
-          <p class="card-text">{{ producto.nombre}} {{producto.color}}</p>
+          <p class="card-text">{{ producto.nombre}} </p>
           <div class="d-flex justify-content-between align-items-center">
             <div class="btn-group">
               <a href="/detalle_producto/{{producto.id}}">
