--- a/JAGUARETEKAA/templates/registration/login.html
+++ b/JAGUARETEKAA/templates/registration/login.html
@@ -5,21 +5,21 @@
 <div class="text-center mt-5">
     <div class="container-sm col-4">
   
-    <h3 class="card-header">Acceder</h3>
+    <h3 class="card-header text-white">Acceder</h3>
   
     <form method="post" action="{% url 'login' %}">
       {% csrf_token %}
   
-      <div class="row mt-5">
-        <div class="col-auto ms-5 ">
+      <div class="row mt-5 text-white">
+        <div class="col-auto ms-4 ">
           <label for="username">Usuario: </label>
         </div>
         <div class="col-auto ms-5">
           {{ form.username }}
         </div>
       </div>
-      <div class="row mt-5">
-        <div class="col-auto ms-5 ">
+      <div class="row mt-5 text-white">
+        <div class="col-auto ms-4 ">
           <label for="password">Contraseña: </label>
         </div>
         <div class="col-auto ms-4">
