--- a/JAGUARETEKAA/JAGUARETEAPP/templates/web/layout.html
+++ b/JAGUARETEKAA/JAGUARETEAPP/templates/web/layout.html
@@ -10,11 +10,7 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <link
-      href="{% static 'fontawesome_free/css/all.min.css' %}"
-      rel="stylesheet"
-      type="text/css"
-    />
+ 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -28,7 +24,7 @@
   </head>
   <body class="bg-dark">
     <div class="container">
-      <header class="p-3 bg-dark mb-4 border-bottom border-secondary">
+      <header class="p-1 bg-dark mb-3 border-bottom border-secondary">
         <div class="container">
           <div
             class="
@@ -47,8 +43,8 @@
                 text-white text-decoration-none
               "
             >
-              <div id="logo">
-                <a href="{% url 'home' %}" class="mx-2"
+              <div class= " me-0" id="logo">
+                <a href="{% url 'home' %}" class="mx-0 mt-4"
                   ><img
                     width="80"
                     height="80"
@@ -69,99 +65,122 @@
               "
             >
               <li>
-                <a href="{% url 'home' %}" class="nav-link px-2 text-secondary"
+                
+              </li>
+              <li class=" ms-0 me-5">
+                <a href="{% url 'home' %}" class="nav-link px-5 text-secondary"
                   >JAGUARETE KAA S.A.</a
                 >
               </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link px-2 text-white dropdown-toggle"
-                  href="#"
-                  id="navbarDropdown"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Categorias
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li>
-                    <a
-                      class="dropdown-item"
-                      href="http://127.0.0.1:8000/buscar/?producto_buscado=nike"
-                      >Nike</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      class="dropdown-item"
-                      href="http://127.0.0.1:8000/buscar/?producto_buscado=adidas"
-                      >Adidas</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      class="dropdown-item"
-                      href="http://127.0.0.1:8000/buscar/?producto_buscado=puma"
-                      >Puma</a
-                    >
-                  </li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link px-2 text-white"
-                  aria-current="page"
-                  href="{% url 'acerca_de' %}"
-                  >Acerca de</a
+              {% include "web/buscador.html" %}
+              {% if request.user.is_authenticated %}
+              <li class="btn btn-sm btn-success nav-item ms-5 me-1">
+                <a class="nav-link text-white" href="{% url 'logout'%}?next={{ home }}"
+                  >Logout</a
                 >
               </li>
-              <li class="nav-item">
-                <a class="nav-link px-2 text-white" href="{% url 'contacto' %}"
-                  >Contacto</a
-                >
-              </li>
+              
+              {% else %}
 
-              {% for group in user.groups.all %}
-              {% if group.name == 'moderador' %}
-              <li class="nav-item">
-                <a
-                  class="nav-link px-2 text-white"
-                  href="{% url 'agregarproducto' %}"
-                  tabindex="-1"
-                  aria-disabled="true"
-                  >Nuevo Producto</a
+              
+              <li class="btn btn-sm btn-success nav-item ms-5 me-1">
+                <a class="nav-link text-white" href="{% url 'login' %}">Login</a>
+              </li>
+              <li class="btn btn-sm btn-success  me-1">
+                <a class="nav-link text-white" href="{% url 'REGISTRO:registro' %}"
+                  >Registro</a
                 >
               </li>
               {% endif %}
-              {% endfor %}
+              
+            
+              
+              {% if not perms.produtos.add_producto %}
+                
+                <li class="btn btn-sm btn-success nav-item   ">
+                  {% if request.user.is_authenticated %}
+                  <a class="nav-link text-white" href="{% url 'carrito' %}"
+                    >Carrito<i class="fas fa-shopping-cart"></i
+                  ></a>
+                  {% else %}
+                  <a class="nav-link text-white" href="{% url 'REGISTRO:registro' %}"
+                    >Carrito<i class="fas fa-shopping-cart"></i
+                  ></a>
+                  {% endif %}
+                </li>
+
+              {% endif %}
+              
             </ul>
 
-            {% include "web/buscador.html" %}
+          
 
             <div>
               <ul class="navbar-nav me-auto d-flex flex-row">
-                {% if request.user.is_authenticated %}
-                <li class="nav-item me-5">
-                  <a class="nav-link" href="{% url 'logout'%}?next={{ home }}"
-                    >Logout</a
+               
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link px-2 text-white dropdown-toggle"
+                    href="#"
+                    id="navbarDropdown"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    Categorias
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li>
+                      <a
+                        class="dropdown-item"
+                        href="http://127.0.0.1:8000/buscar/?producto_buscado=nike"
+                        >Nike</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="dropdown-item"
+                        href="http://127.0.0.1:8000/buscar/?producto_buscado=adidas"
+                        >Adidas</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="dropdown-item"
+                        href="http://127.0.0.1:8000/buscar/?producto_buscado=puma"
+                        >Puma</a
+                      >
+                    </li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link px-2 text-white"
+                    aria-current="page"
+                    href="{% url 'acerca_de' %}"
+                    >Acerca de</a
                   >
                 </li>
-                <li class="nav-item me-3">
-                  <a class="nav-link" href="#"
-                    >Carrito<i class="fas fa-shopping-cart"></i
-                  ></a>
+                <li class="nav-item">
+                  <a class="nav-link px-2 text-white" href="mailto:marcosrorai@gmail.com"
+                    >Contacto</a
+                  >
                 </li>
-                {% else %}
-                <li class="nav-item me-5">
-                  <a class="nav-link" href="{% url 'login' %}">Login</a>
-                </li>
-                <li class="nav-item me-5">
-                  <a class="nav-link" href="{% url 'REGISTRO:registro' %}"
-                    >Registro</a
+  
+                {% for group in user.groups.all %}
+                {% if group.name == 'moderador' %}
+                <li class="nav-item">
+                  <a
+                    class="nav-link px-2 text-white"
+                    href="{% url 'agregarproducto' %}"
+                    tabindex="-1"
+                    aria-disabled="true"
+                    >Nuevo Producto</a
                   >
                 </li>
                 {% endif %}
+                {% endfor %}
+               
               </ul>
             </div>
           </div>
