--- a/JAGUARETEKAA/JAGUARETEAPP/templates/web/resultado_busqueda.html
+++ b/JAGUARETEKAA/JAGUARETEAPP/templates/web/resultado_busqueda.html
@@ -1,15 +1,15 @@
 {% extends "web/layout.html" %} 
 {% block main %}
-<div class="text-center mb-5 text-white">
+<div class=" mb-5 text-white">
     <p>Resultado de la busqueda: {{query}}</p>
     {% if articulo %}
         <p>Productos encontrados: {{articulo|length}} productos </p>
 
         <ul>
             {% for art in articulo %}
-                <li>
+                <li style= list-style:none>
                     
-                    {{art.nombre}} &nbsp; {{art.color}} &nbsp; $ {{art.precio}} &nbsp;>
+                    {{art.nombre}}  &nbsp; $ {{art.precio}} &nbsp;>
                     <a href="/detalle_producto/{{art.id}}">
                         <button type="button" class="btn btn-sm btn-outline-secondary">
                           Ver Detalle
